// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`M4 golden fixtures > snapshot AST: credit 1`] = `
{
  "declarations": [
    {
      "name": "count",
      "type": "input-variable",
    },
    {
      "name": "countPlural",
      "type": "local-variable",
      "value": {
        "annotation": {
          "name": "plural",
          "options": [],
          "type": "function-reference",
        },
        "arg": {
          "name": "count",
          "type": "variable-reference",
        },
        "type": "expression",
      },
    },
    {
      "name": "countPluralExact",
      "type": "local-variable",
      "value": {
        "arg": {
          "name": "count",
          "type": "variable-reference",
        },
        "type": "expression",
      },
    },
  ],
  "selectors": [
    {
      "name": "countPluralExact",
      "type": "variable-reference",
    },
    {
      "name": "countPlural",
      "type": "variable-reference",
    },
  ],
  "variants": [
    {
      "matches": [
        {
          "key": "countPluralExact",
          "type": "literal-match",
          "value": "0",
        },
        {
          "key": "countPlural",
          "type": "catchall-match",
        },
      ],
      "pattern": [
        {
          "type": "text",
          "value": "You have no ",
        },
        {
          "name": "strong",
          "type": "markup-start",
        },
        {
          "type": "text",
          "value": "credit",
        },
        {
          "name": "strong",
          "type": "markup-end",
        },
        {
          "type": "text",
          "value": " left. ",
        },
        {
          "name": "link",
          "type": "markup-start",
        },
        {
          "type": "text",
          "value": "Top up your account",
        },
        {
          "name": "link",
          "type": "markup-end",
        },
        {
          "type": "text",
          "value": ".",
        },
      ],
    },
    {
      "matches": [
        {
          "key": "countPluralExact",
          "type": "catchall-match",
        },
        {
          "key": "countPlural",
          "type": "literal-match",
          "value": "one",
        },
      ],
      "pattern": [
        {
          "type": "text",
          "value": "You have ",
        },
        {
          "name": "strong",
          "type": "markup-start",
        },
        {
          "annotation": {
            "name": "icu:pound",
            "options": [],
            "type": "function-reference",
          },
          "arg": {
            "name": "count",
            "type": "variable-reference",
          },
          "type": "expression",
        },
        {
          "type": "text",
          "value": " credit",
        },
        {
          "name": "strong",
          "type": "markup-end",
        },
        {
          "type": "text",
          "value": " left.",
        },
      ],
    },
    {
      "matches": [
        {
          "key": "countPluralExact",
          "type": "catchall-match",
        },
        {
          "key": "countPlural",
          "type": "catchall-match",
        },
      ],
      "pattern": [
        {
          "type": "text",
          "value": "You have ",
        },
        {
          "name": "strong",
          "type": "markup-start",
        },
        {
          "annotation": {
            "name": "icu:pound",
            "options": [],
            "type": "function-reference",
          },
          "arg": {
            "name": "count",
            "type": "variable-reference",
          },
          "type": "expression",
        },
        {
          "type": "text",
          "value": " credits",
        },
        {
          "name": "strong",
          "type": "markup-end",
        },
        {
          "type": "text",
          "value": " left.",
        },
      ],
    },
  ],
}
`;

exports[`M4 golden fixtures > snapshot AST: resumeCount 1`] = `
{
  "declarations": [
    {
      "name": "count",
      "type": "input-variable",
    },
    {
      "name": "countPlural",
      "type": "local-variable",
      "value": {
        "annotation": {
          "name": "plural",
          "options": [],
          "type": "function-reference",
        },
        "arg": {
          "name": "count",
          "type": "variable-reference",
        },
        "type": "expression",
      },
    },
  ],
  "selectors": [
    {
      "name": "countPlural",
      "type": "variable-reference",
    },
  ],
  "variants": [
    {
      "matches": [
        {
          "key": "countPlural",
          "type": "literal-match",
          "value": "one",
        },
      ],
      "pattern": [
        {
          "type": "text",
          "value": "You have ",
        },
        {
          "name": "strong",
          "type": "markup-start",
        },
        {
          "annotation": {
            "name": "icu:pound",
            "options": [],
            "type": "function-reference",
          },
          "arg": {
            "name": "count",
            "type": "variable-reference",
          },
          "type": "expression",
        },
        {
          "type": "text",
          "value": " CV",
        },
        {
          "name": "strong",
          "type": "markup-end",
        },
        {
          "type": "text",
          "value": " in your account.",
        },
      ],
    },
    {
      "matches": [
        {
          "key": "countPlural",
          "type": "catchall-match",
        },
      ],
      "pattern": [
        {
          "type": "text",
          "value": "You have ",
        },
        {
          "name": "strong",
          "type": "markup-start",
        },
        {
          "annotation": {
            "name": "icu:pound",
            "options": [],
            "type": "function-reference",
          },
          "arg": {
            "name": "count",
            "type": "variable-reference",
          },
          "type": "expression",
        },
        {
          "type": "text",
          "value": " CVs",
        },
        {
          "name": "strong",
          "type": "markup-end",
        },
        {
          "type": "text",
          "value": " in your account.",
        },
      ],
    },
  ],
}
`;

exports[`M4 golden fixtures > snapshot AST: terms 1`] = `
{
  "declarations": [
    {
      "name": "count",
      "type": "input-variable",
    },
    {
      "name": "countPlural",
      "type": "local-variable",
      "value": {
        "annotation": {
          "name": "plural",
          "options": [],
          "type": "function-reference",
        },
        "arg": {
          "name": "count",
          "type": "variable-reference",
        },
        "type": "expression",
      },
    },
  ],
  "selectors": [
    {
      "name": "countPlural",
      "type": "variable-reference",
    },
  ],
  "variants": [
    {
      "matches": [
        {
          "key": "countPlural",
          "type": "literal-match",
          "value": "one",
        },
      ],
      "pattern": [
        {
          "type": "text",
          "value": "By creating your CV, you accept our ",
        },
        {
          "name": "termsLink",
          "type": "markup-start",
        },
        {
          "type": "text",
          "value": "terms and conditions",
        },
        {
          "name": "termsLink",
          "type": "markup-end",
        },
        {
          "type": "text",
          "value": ". You have ",
        },
        {
          "name": "strong",
          "type": "markup-start",
        },
        {
          "annotation": {
            "name": "icu:pound",
            "options": [],
            "type": "function-reference",
          },
          "arg": {
            "name": "count",
            "type": "variable-reference",
          },
          "type": "expression",
        },
        {
          "type": "text",
          "value": " document",
        },
        {
          "name": "strong",
          "type": "markup-end",
        },
        {
          "type": "text",
          "value": ".",
        },
      ],
    },
    {
      "matches": [
        {
          "key": "countPlural",
          "type": "catchall-match",
        },
      ],
      "pattern": [
        {
          "type": "text",
          "value": "By creating your CVs, you accept our ",
        },
        {
          "name": "termsLink",
          "type": "markup-start",
        },
        {
          "type": "text",
          "value": "terms and conditions",
        },
        {
          "name": "termsLink",
          "type": "markup-end",
        },
        {
          "type": "text",
          "value": ". You have ",
        },
        {
          "name": "strong",
          "type": "markup-start",
        },
        {
          "annotation": {
            "name": "icu:pound",
            "options": [],
            "type": "function-reference",
          },
          "arg": {
            "name": "count",
            "type": "variable-reference",
          },
          "type": "expression",
        },
        {
          "type": "text",
          "value": " documents",
        },
        {
          "name": "strong",
          "type": "markup-end",
        },
        {
          "type": "text",
          "value": ".",
        },
      ],
    },
  ],
}
`;
